--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -28,6 +28,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-client</artifactId>
+			<version>3.1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+			<version>3.1.5</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
