--- a/bank-account-service/src/main/resources/bootstrap.properties
+++ b/bank-account-service/src/main/resources/bootstrap.properties
@@ -1,15 +1,18 @@
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://config-server:8888
+#spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.profile=dev
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
-management.health.circuitbreakers.enabled= true
-management.endpoints.web.exposure.include= "*"
-management.endpoint.health.show-details= always
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 
-resilience4j.circuitbreaker.instances.account.registerHealthIndicator= true
-resilience4j.circuitbreaker.instances.account.eventConsumerBufferSize: 10
-resilience4j.circuitbreaker.instances.account.slidingWindowType: COUNT_BASED
-resilience4j.circuitbreaker.instances.account.slidingWindowSize: 5
-resilience4j.circuitbreaker.instances.account.failureRateThreshold: 5
-resilience4j.circuitbreaker.instances.account.waitDurationInOpenState: 5s
-resilience4j.circuitbreaker.instances.account.permittedNumberOfCallsInHalfOpenState: 3
-resilience4j.circuitbreaker.instances.account.automaticTransitionFromOpenToHalfOpenEnabled: true
+resilience4j.circuitbreaker.instances.client.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.client.eventConsumerBufferSize=10
+resilience4j.circuitbreaker.instances.client.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.client.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.client.failureRateThreshold=5
+resilience4j.circuitbreaker.instances.client.waitDurationInOpenState=2s
+resilience4j.circuitbreaker.instances.client.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.client.automaticTransitionFromOpenToHalfOpenEnabled=true
