--- a/client-service/src/main/resources/bootstrap.properties
+++ b/client-service/src/main/resources/bootstrap.properties
@@ -1,2 +1,8 @@
+#spring.cloud.config.uri=http://config-server:8888
 spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.profile=dev
+#eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+server.port = 0
+spring.application.name=client-service
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
