--- a/eureka-server/src/main/resources/bootstrap.properties
+++ b/eureka-server/src/main/resources/bootstrap.properties
@@ -1,3 +1,4 @@
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://config-server:8888
+#spring.cloud.config.uri=http://localhost:8888
 spring.application.name=eureka-server
 spring.cloud.config.profile=dev
