--- a/api-gateway/src/main/resources/bootstrap.properties
+++ b/api-gateway/src/main/resources/bootstrap.properties
@@ -1,8 +1,8 @@
-#spring.cloud.config.uri=http://config-server:8888
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://config-server:8888
+#spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.profile=dev
 spring.application.name=api-gateway
 
 server.port=8090
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-#eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
